--- a/Site/index.html
+++ b/Site/index.html
@@ -31,7 +31,7 @@
             </center>
         </div>
     </div>
-    <div class="title">Ultraviolet</div>
+    <div class="title">Trir's UltraMalding Tool</div>
     <a href="#" target="_parent">Opens the linked document in the parent frame</a>
     <center>
         <form>
